# catering-information-collection

./: .gitignore  README.md
catering-admin/: README.md  index.html  package-lock.json  package.json
catering-admin/src/: main.ts
catering-admin/src/api/: auth.ts  health.ts  post.ts  region.ts  request.ts  search.ts
catering-admin/src/layouts/: AdminLayout.vue
catering-admin/src/router/: index.ts
catering-admin/src/stores/: user.ts
catering-admin/src/styles/: index.css
catering-ai-service/: README.md  pyproject.toml
catering-ai-service/app/: main.py
catering-ai-service/app/api/v1/: health.py  search.py
catering-ai-service/app/chains/: search_parse.py
catering-ai-service/app/core/: config.py  llm_factory.py  security.py
catering-ai-service/app/prompts/: search_parse.txt
catering-ai-service/app/schemas/: search.py
catering-app/: README.md  package-lock.json  package.json  vite.config.ts
catering-app/src/: pages.json
catering-app/src/api/: auth.ts  post.ts  region.ts  request.ts
catering-server/: pom.xml
catering-server/catering-ai/: pom.xml
catering-server/catering-api/: pom.xml
catering-server/catering-common/: pom.xml
catering-server/catering-dao/: pom.xml
catering-server/catering-job/: pom.xml
catering-server/catering-model/: pom.xml
catering-server/catering-service/: pom.xml
deploy/: README.md  docker-compose.dev.yml
deploy/es/: README.md  create-post-index.ps1  post-index-v1.json
docs/: DESIGN-catering-info-platform.md  DEV-PHASES.md  PRD.md  TECH.md
sql/: README.md  schema.sql  seed.sql
(+166 files in other folders)
